platform/external-services/adguard/endpointslice.yaml
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: adguard
  namespace: infra
  labels:
    kubernetes.io/service-name: adguard
addressType: IPv4
ports:
  - name: http
    protocol: TCP
    port: 3001
endpoints:
  - addresses:
      - 192.168.15.140
