platform/external-services/adguard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguard
  namespace: infra
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
